Fixes dialog bg color in dark mode

--- a/app/assets/stylesheets/setup.css
+++ b/app/assets/stylesheets/setup.css
@@ -52,7 +52,7 @@
 }
 
 .SetupAddProducts-option :is(label:hover, input:focus ~ label) {
-	background: var(--color-blue-925);
+	background: var(--color-bg2);
 }
 
 .SetupAddProducts-option :checked + label .SetupAddProducts-checkmark {
@@ -67,13 +67,13 @@
 }
 
 .SetupAddProducts-option input:checked + label {
-	color: var(--color-accent-on-dark);
-	background: var(--color-blue-175);
+	color: var(--color-copy-on-accent);
+	background: var(--color-accent);
 }
 
 .SetupAddProducts-option input:checked + label .SetupAddProducts-checkmark {
 	display: block;
-	color: var(--color-white);
+	color: currentColor;
 }
 
 @media (min-width: 32.0625rem) {
